# rest-uploader

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  api_token.py  img_process.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_windows.txt  rest_uploader.service  settings.py  setup.cfg  setup.py  test.py  tox.ini  watcher.py  windows-requirements.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
rest_uploader/: __init__.py  api_token.py  cli.py  email_processor.py  img_process.py  rest_uploader.py  settings.py
tests/: __init__.py  test_rest_uploader.py
