[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rest_uploader"
version = "1.16.0"
authors = [
  { name="Justin Keller", email="kellerjustin@protonmail.com" },
]
description = "REST API File Uploader for Joplin"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cerealkella/rest-uploader"
"Bug Tracker" = "https://github.com/cerealkella/rest-uploader/issues"
