[bumpversion]
current_version = 1.18.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:rest_uploader/__init__.py]
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]

[metadata]
name = rest-uploader
version = attr: rest-uploader.__version__
long_description = file: README.md
long_description_content_type = text/markdown
